--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,14 @@ Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.1.1
 greenlet==2.0.2
+gunicorn==21.2.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 mailjet-rest==1.3.4
 Mako==1.2.4
 MarkupSafe==2.1.3
+packaging==23.2
 psycopg2==2.9.7
 pycoingecko==3.1.0
 python-dotenv==1.0.0
