--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
-Flask==2.3.3
+Flask==2.2.5
 Flask-Login==0.6.2
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
@@ -20,11 +20,11 @@ MarkupSafe==2.1.3
 packaging==23.2
 psycopg2==2.9.7
 pycoingecko==3.1.0
-python-dotenv==1.0.0
+python-dotenv
 pytz==2023.3.post1
 requests==2.31.0
 SQLAlchemy==2.0.21
 typing_extensions==4.8.0
 urllib3==2.0.5
-Werkzeug==2.3.7
+Werkzeug==2.2.3
 WTForms==3.0.1
